k8s/apps/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mountain-blog
  namespace: app
  labels:
    app.kubernetes.io/name: mountain-blog
spec:
  selector:
    app.kubernetes.io/name: mountain-blog
  ports:
    - name: http
      port: 80
      targetPort: http
