k8s/apps/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mountain-blog
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: mountain-blog.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mountain-blog
                port:
                  name: http
